[gd_scene load_steps=7 format=3 uid="uid://driyjam2uemgo"]

[ext_resource type="Script" uid="uid://bcq86p3eh0mcd" path="res://menus/title/button_group.gd" id="1_3dqrs"]
[ext_resource type="Texture2D" uid="uid://bmorjcult0hef" path="res://icon.svg" id="1_rri1c"]
[ext_resource type="Theme" uid="uid://bbxj20g3516g0" path="res://ui/ZeldaBOTW.tres" id="3_yk2im"]

[sub_resource type="Animation" id="Animation_yk2im"]
resource_name = "CursorAnimation"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%Cursor/..:theme_override_constants/separation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 2, 1),
"update": 0,
"values": [14, 23, 14]
}

[sub_resource type="Animation" id="Animation_yij84"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("%Cursor/..:theme_override_constants/separation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [32]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y6khh"]
_data = {
&"CursorAnimation": SubResource("Animation_yk2im"),
&"RESET": SubResource("Animation_yij84")
}

[node name="ButtonGroup" type="HBoxContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_bottom = 34.0
grow_horizontal = 0
theme = ExtResource("3_yk2im")
theme_type_variation = &"ButtonWithCursor"
theme_override_constants/separation = 32
alignment = 2
script = ExtResource("1_3dqrs")

[node name="Cursor" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(33, 33)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_rri1c")
expand_mode = 1
stretch_mode = 4

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_yk2im")
theme_type_variation = &"DefaultButton"
text = "Text"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Cursor")
libraries = {
&"": SubResource("AnimationLibrary_y6khh")
}
autoplay = "CursorAnimation"

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
